--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </p>
   <p>
   <ul>
-    <li>There are currently 42 species of dolphins and seven species of <a href="porpoises.html">porpoises</a>.</li>
+    <li>There are currently 42 species of dolphins and seven species of <a href="Porpoises.html">porpoises</a>.</li>
     <li>A dolphin pregnancy last between nine and 16 months. The mother feeds her offspring on milk. The sons and daughters of resident orcas stay with their maternal family for life.</li>
     <li>All dolphins have conical-shaped teeth. A Risso's dolphin has 14 while a spinner dolphin can have 240.</li>
     <li>Dolphins have an array of vocalisations such as clicks, whistles and squeals which they use for their well-developed communication and echolocation skills.</li>
